--- a/requirements.txt
+++ b/requirements.txt
@@ -6,41 +6,78 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+coloredlogs==15.0.1
+contourpy==1.1.1
+cycler==0.12.1
+filelock==3.16.1
+flatbuffers==24.12.23
+fonttools==4.54.1
+fsspec==2024.12.0
 gitdb==4.0.12
 GitPython==3.1.44
+humanfriendly==10.0
 idna==3.10
-importlib-resources==6.4.5
-jinja2==3.1.5
+importlib_resources==6.4.5
+Jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.7
+labelImg==1.8.6
+lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.7.5
 mdurl==0.1.2
+mpmath==1.3.0
 narwhals==1.20.1
+networkx==3.1
 numpy==1.24.4
+onnx==1.17.0
+onnxruntime==1.19.2
 opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 packaging==24.2
 pandas==2.0.3
 pillow==10.4.0
-pkgutil-resolve-name==1.3.10
+pkgutil_resolve_name==1.3.10
 protobuf==5.29.2
+psutil==6.1.1
+py-cpuinfo==9.0.0
 pyarrow==17.0.0
+pycocotools==2.0.7
 pydeck==0.9.1
-pygments==2.19.0
+pyglet==2.0.20
+Pygments==2.19.0
+pyparsing==3.1.4
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.15.0
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
+PyYAML==6.0.2
 referencing==0.35.1
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.20.1
+scipy==1.10.1
+seaborn==0.13.2
+segment_anything @ git+https://github.com/facebookresearch/segment-anything.git@dca509fe793f601edb92606367a655c15ac00fdf
 six==1.17.0
 smmap==5.0.2
 streamlit==1.40.1
+sympy==1.13.3
 tenacity==9.0.0
+thop==0.1.1.post2209072238
 toml==0.10.2
+torch==2.4.1
+torchvision==0.19.1
 tornado==6.4.2
-typing-extensions==4.12.2
+tqdm==4.67.1
+typing_extensions==4.12.2
 tzdata==2024.2
+ultralytics==8.3.56
+ultralytics-thop==2.0.13
 urllib3==2.2.3
 watchdog==4.0.2
 xlrd==2.0.1
